pre-processor set up, nav set up + styled, mixin created for styling buttons

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins in here
+.buttons{
+    background-color: #008080;
+        margin: 0px 4rem 0px 0px;
+        height: 4rem;
+        border-radius: 10px;
+        text-align: center;
+        line-height: 40px;
+        color: white;
+        font-size: 20px;
+}
