--- a/less/global.less
+++ b/less/global.less
@@ -44,3 +44,9 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.fb-img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
