--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,11 @@
+.bus-banner{
+  max-width:800px;
+  margin: 0 auto;
+  h2{
+    padding-top: 20px;
+  }
+}
+
 .home {
 
   .content-section {
@@ -56,6 +64,9 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      .btn{
+        .buttons();
+      }
     }
   }
 }// home
