--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,33 @@
 // Navigation Styles here
+nav{
+    border-bottom: 2px dashed @navigation-border;
+
+    .nav-container{
+        max-width: 800px;
+        margin: 0 auto;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 5px;
+        
+    
+        .logo{
+            width: 40%;
+            a{
+                text-decoration: none;
+            }
+        }
+        
+        .nav-links{
+            width:60%;
+            display:flex;
+            justify-content: flex-end;
+            
+            a{
+                margin: 0px 25px;
+                text-decoration: none;
+            }
+        }
+    }
+
+}
