--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,16 +14,31 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile{
+      border-top: 2px dashed @navigation-border;
+      margin-top: 30px;
+      flex-direction: column;
+    }
+
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile{
+        width: 100%;
+        padding-top: 30px;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile{
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -34,6 +49,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile{
+      padding-top: 30px;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -50,6 +69,10 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    @media @mobile{
+      width: 100%;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -61,11 +84,21 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
       .btn{
         .buttons();
+      }
+
+      @media @mobile{
+        width: 75%;
       }
     }
   }
