--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,10 @@
 nav{
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile{
+        margin: 0 -15px;
+    }
+
     .nav-container{
         max-width: 800px;
         margin: 0 auto;
