Portion or stretch (animation mix in) completed

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -96,9 +96,15 @@
       .btn{
         .buttons();
       }
+      .btn:hover{
+        .hover();
+      }
+      .btn:active{
+        .active();
+      }
 
       @media @mobile{
-        width: 75%;
+        width: 90%;
       }
     }
   }
