--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,3 +9,15 @@
         color: white;
         font-size: 20px;
 }
+
+// animation
+
+.hover{
+    background-color: yellow;
+    color: black;
+}
+
+.active{
+    transform: translateY(-5px);
+    font-size: 3rem;
+}
