--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,14 @@
   color: white;
   font-size: 20px;
 }
+.hover {
+  background-color: yellow;
+  color: black;
+}
+.active {
+  transform: translateY(-5px);
+  font-size: 3rem;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -349,8 +357,16 @@ nav .nav-container .nav-links a {
   color: white;
   font-size: 20px;
 }
+.home .content-pick .destination .btn:hover {
+  background-color: yellow;
+  color: black;
+}
+.home .content-pick .destination .btn:active {
+  transform: translateY(-5px);
+  font-size: 3rem;
+}
 @media (max-width: 500px) {
   .home .content-pick .destination {
-    width: 75%;
+    width: 90%;
   }
 }
