--- a/less/home-page.less
+++ b/less/home-page.less
@@ -108,4 +108,47 @@
       }
     }
   }
+
+  #fun_in_the_sunForm, #mountain_excursionForm, #island_getawayForm{
+    display:none;
+  }
+
+  .sign-up-container{
+    padding: 25px 0px;
+    position: relative;
+    display:flex;
+    justify-content: center;
+    // left: 50%;
+    // margin-left: 225px;
+
+    form{
+      width: 450px;
+      display:flex;
+      flex-direction: column;
+      border: 2px solid grey;
+      border-radius: 5px;
+      padding: 25px;
+      background-color: grey;
+
+      input, textarea{
+        margin: 5px;
+      }
+      .button-interface{
+        padding-top: 15px;
+        display:flex;
+        justify-content: space-evenly;
+
+        .form-button{
+          .buttons();
+          padding: 0px 15px;
+        }
+        .form-button:hover{
+          .hover();
+        }
+        .form-button:active{
+          .active();
+        }
+      }
+    }
+  }
 }// home
