--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,7 +24,7 @@ nav{
         
     
         .logo{
-            width: 40%;
+            width: 30%;
             @media @mobile{
                 padding-bottom: 10px;
                 text-align: center;
@@ -36,9 +36,10 @@ nav{
         }
         
         .nav-links{
-            width:60%;
+            width:70%;
             display:flex;
             justify-content: flex-end;
+            font-size: 1.5rem;
 
             @media @mobile{
                 justify-content: space-between;
@@ -46,7 +47,7 @@ nav{
             }
             
             a{
-                margin: 0px 25px;
+                margin: 0px 15px;
                 text-decoration: none;
             }
         }
