--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,12 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @tablet{
+      justify-content: space-between;
+      flex-direction: column;
+      align-items: center;
+    }
+
     @media @mobile{
       border-top: 2px dashed @navigation-border;
       margin-top: 30px;
@@ -26,15 +32,24 @@
       width: 48%;
       padding-right: 1%;
 
+      @media @tablet{
+        width: 80%;
+        padding-top: 30px;
+      }
+
       @media @mobile{
         width: 100%;
-        padding-top: 30px;
+        
       }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @tablet{
+        width: 80%;
+      }
 
       @media @mobile{
         width: 100%;
@@ -49,6 +64,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    
+    @media @tablet{
+      flex-direction: column-reverse;
+    }
 
     @media @mobile{
       padding-top: 30px;
@@ -118,8 +137,7 @@
     position: relative;
     display:flex;
     justify-content: center;
-    // left: 50%;
-    // margin-left: 225px;
+
 
     form{
       width: 450px;
@@ -129,6 +147,14 @@
       border-radius: 5px;
       padding: 25px;
       background-color: grey;
+
+      @media @tablet{
+        width: 350px; 
+      }
+
+      @media @mobile{
+        width: 275px; 
+      }
 
       input, textarea{
         margin: 5px;
