--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,3 @@
-.buttons {
-  background-color: #008080;
-  margin: 0px 4rem 0px 0px;
-  height: 4rem;
-  border-radius: 10px;
-  text-align: center;
-  line-height: 40px;
-  color: white;
-  font-size: 20px;
-}
-.hover {
-  background-color: yellow;
-  color: black;
-}
-.active {
-  transform: translateY(-5px);
-  font-size: 3rem;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -186,23 +168,6 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.fb-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-}
-@media (max-width: 500px) {
-  body {
-    max-width: 500px;
-    padding: 15px;
-  }
-}
-@media screen and (max-width: 830px) {
-  body {
-    padding: 25px;
-  }
-}
 nav {
   border-bottom: 2px dashed #C0C0C0;
 }
@@ -270,7 +235,14 @@ nav .nav-container .nav-links a {
   margin: 0 auto;
 }
 .bus-banner h2 {
-  padding-top: 20px;
+  padding: 20px 10px 0px 10px;
+}
+.bus-banner p {
+  padding: 0px 10px 0px 10px;
+}
+.home {
+  margin: 0 auto;
+  padding: 10px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -358,46 +330,6 @@ nav .nav-container .nav-links a {
 .home .content-destination img {
   border-radius: 10px;
 }
-.home .content-pick {
-  padding-top: 30px;
-  border-top: 2px dashed #C0C0C0;
-  display: flex;
-  justify-content: space-between;
-}
-@media (max-width: 500px) {
-  .home .content-pick {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.home .content-pick .destination {
-  width: 30%;
-  margin-bottom: 30px;
-}
-.home .content-pick .destination .btn {
-  background-color: #008080;
-  margin: 0px 4rem 0px 0px;
-  height: 4rem;
-  border-radius: 10px;
-  text-align: center;
-  line-height: 40px;
-  color: white;
-  font-size: 20px;
-}
-.home .content-pick .destination .btn:hover {
-  background-color: yellow;
-  color: black;
-}
-.home .content-pick .destination .btn:active {
-  transform: translateY(-5px);
-  font-size: 3rem;
-}
-@media (max-width: 500px) {
-  .home .content-pick .destination {
-    width: 90%;
-  }
-}
 .home #fun_in_the_sunForm,
 .home #mountain_excursionForm,
 .home #island_getawayForm {
@@ -417,6 +349,7 @@ nav .nav-container .nav-links a {
   border-radius: 5px;
   padding: 25px;
   background-color: grey;
+  margin: 0 auto;
 }
 @media (max-width: 700px) {
   .home .sign-up-container form {
@@ -425,8 +358,16 @@ nav .nav-container .nav-links a {
 }
 @media (max-width: 500px) {
   .home .sign-up-container form {
-    width: 275px;
+    width: 320px;
+    padding: 5px;
   }
+}
+.home .sign-up-container form h3 {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: black;
+  padding-bottom: 10px;
 }
 .home .sign-up-container form input,
 .home .sign-up-container form textarea {
@@ -437,22 +378,61 @@ nav .nav-container .nav-links a {
   display: flex;
   justify-content: space-evenly;
 }
-.home .sign-up-container form .button-interface .form-button {
-  background-color: #008080;
-  margin: 0px 4rem 0px 0px;
+.home .sign-up-container form .button-interface .button {
+  margin: 0px, 4rem, 0px, 0px;
   height: 4rem;
-  border-radius: 10px;
   text-align: center;
   line-height: 40px;
   color: white;
   font-size: 20px;
-  padding: 0px 15px;
+  background-color: #008080;
+  border-radius: 10px;
 }
-.home .sign-up-container form .button-interface .form-button:hover {
+.home .sign-up-container form .button-interface .button:hover {
   background-color: yellow;
   color: black;
 }
-.home .sign-up-container form .button-interface .form-button:active {
+.home .sign-up-container form .button-interface .button:active {
   transform: translateY(-5px);
-  font-size: 3rem;
+  font-size: 2.75rem;
+}
+.home .content-pick {
+  padding-top: 30px;
+  border-top: 2px dashed #C0C0C0;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.home .content-pick .destination {
+  width: 30%;
+  margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
+}
+.home .content-pick .destination .button {
+  margin: 0px, 4rem, 0px, 0px;
+  height: 4rem;
+  text-align: center;
+  line-height: 40px;
+  color: white;
+  font-size: 20px;
+  background-color: #008080;
+  border-radius: 10px;
+}
+.home .content-pick .destination .button:hover {
+  background-color: yellow;
+  color: black;
+}
+.home .content-pick .destination .button:active {
+  transform: translateY(-5px);
+  font-size: 2.75rem;
 }
