--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,23 +1,26 @@
 // Mixins in here
-.buttons{
-    background-color: #008080;
-        margin: 0px 4rem 0px 0px;
-        height: 4rem;
-        border-radius: 10px;
-        text-align: center;
-        line-height: 40px;
-        color: white;
-        font-size: 20px;
+.buttonMixin(@buttonBgColor, @buttonRadius){
+    margin: 0px, 4rem, 0px, 0px;
+    height: 4rem;
+    text-align: center;
+    line-height: 40px;
+    color: white;
+    font-size: 20px;
+    background-color: @buttonBgColor;
+    border-radius: @buttonRadius;
 }
 
-// animation
+//@buttonRadius = 10px;
+//@buttonBgColor = #008080;
 
-.hover{
+// Mix in Styline for buttons
+
+.hover(){
     background-color: yellow;
     color: black;
 }
 
-.active{
+.active(){
     transform: translateY(-5px);
-    font-size: 3rem;
+    font-size: 2.75rem;
 }
