--- a/less/variables.less
+++ b/less/variables.less
@@ -13,6 +13,6 @@
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
 
-// Escaping
+// Media Escapes 
 @mobile: ~"(max-width: 500px)";
 @tablet: ~"(max-width: 700px)";
